force-app/main/default/objects/FS_Service_Order__c/FS_Service_Order__c.object-meta.xml
<CustomObject>
    <label>Service Order</label>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Service Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>