force-app/main/default/objects/FS_Service_Order__c/fields/FS_Add_new_Readiness_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Add_new_Readiness_Notes_Comments__c</fullName>
    <label>Add new Readiness Notes/Comments</label>
    <type>TextArea</type>
</CustomField>