force-app/main/default/objects/FS_Service_Order__c/fields/FS_Add_Service_Order_Change_NotesComment__c.field-meta.xml
<CustomField>
    <fullName>FS_Add_Service_Order_Change_NotesComment__c</fullName>
    <description>Add Service Order Change Notes/Comments</description>
    <label>Add Service Order Notes/Comments</label>
    <type>TextArea</type>
</CustomField>