force-app/main/default/objects/FS_Service_Order__c/fields/FS_Customer_Readiness__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Readiness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Readiness</label>
    <type>Checkbox</type>
</CustomField>