force-app/main/default/objects/FS_Service_Order__c/fields/FS_Flavor_Change_Header__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_Change_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flavor Change Header</label>
    <referenceTo>FS_Flavor_Change_Head__c</referenceTo>
    <relationshipLabel>Service Orders</relationshipLabel>
    <relationshipName>Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>