force-app/main/default/objects/FS_Service_Order__c/fields/FS_Flavor_Change_Status_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_Change_Status_Modified_Date__c</fullName>
    <description>Flavor Change Status Modified Date</description>
    <label>Flavor Change Status Modified Date</label>
    <type>DateTime</type>
</CustomField>