force-app/main/default/objects/FS_Service_Order__c/fields/FS_JDE_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>FS_JDE_Doc_No__c</fullName>
    <label>Work Order/ Doc #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>