force-app/main/default/objects/FS_Service_Order__c/fields/FS_Local_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Local_Time__c</fullName>
    <formula>IF(OR(MONTH(DATEVALUE(LastModifiedDate))==1,
      MONTH(DATEVALUE(LastModifiedDate))==2,
      MONTH(DATEVALUE(LastModifiedDate))==3,
      MONTH(DATEVALUE(LastModifiedDate))==11,
      MONTH(DATEVALUE(LastModifiedDate))==12) , 
	  LEFT(Text(LastModifiedDate-0.2083),LEN(Text(LastModifiedDate-0.2083))-1),
	  LEFT(Text(LastModifiedDate-0.1666),LEN(Text(LastModifiedDate-0.1666))-1))</formula>
    <label>Local Time</label>
    <type>Text</type>
</CustomField>