force-app/main/default/objects/FS_Service_Order__c/fields/FS_Market__c.field-meta.xml
<CustomField>
    <fullName>FS_Market__c</fullName>
    <label>7000/7100 Market</label>
    <length>80</length>
    <type>Text</type>
</CustomField>