force-app/main/default/objects/FS_Service_Order__c/fields/FS_Market_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Market_Activation_Date__c</fullName>
    <label>7000/7100 Market Activation Date</label>
    <type>Date</type>
</CustomField>