force-app/main/default/objects/FS_Service_Order__c/fields/FS_New_Closeout_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_New_Closeout_Notes__c</fullName>
    <label>Add new Closeout Notes/Comments</label>
    <type>TextArea</type>
</CustomField>