force-app/main/default/objects/FS_Service_Order__c/fields/FS_New_Market_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_New_Market_Activation_Date__c</fullName>
    <description>Market Activation Date for 6000/6050 SP Aligned Zip</description>
    <label>6000 Series Market Activation Date</label>
    <type>Date</type>
</CustomField>