force-app/main/default/objects/FS_Service_Order__c/fields/FS_New_Readiness_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_New_Readiness_Notes__c</fullName>
    <label>Readiness Notes/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>