force-app/main/default/objects/FS_Service_Order__c/fields/FS_New_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>FS_New_Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider for 6000</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Orders (Service Provider for 6000/6050)</relationshipLabel>
    <relationshipName>New_Service_Provider</relationshipName>
    <type>Lookup</type>
</CustomField>