force-app/main/default/objects/FS_Service_Order__c/fields/FS_New_SP_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_New_SP_Code__c</fullName>
    <description>SP Code for 6000/6050 type SP Aligned Zip</description>
    <label>6000 Series SP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>