force-app/main/default/objects/FS_Service_Order__c/fields/FS_NNS_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>FS_NNS_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NNS Confirmed</label>
    <type>Checkbox</type>
</CustomField>