force-app/main/default/objects/FS_Service_Order__c/fields/FS_Other_Market__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Market__c</fullName>
    <description>Market name for 8000/9000 type SP Aligned Zip</description>
    <label>8000/9000/9100 Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>