force-app/main/default/objects/FS_Service_Order__c/fields/FS_Other_Market_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Market_Activation_Date__c</fullName>
    <description>Market Activation Date for 8000/9000 SP Aligned Zip</description>
    <label>8000/9000/9100 Market Activation Date</label>
    <type>Date</type>
</CustomField>