force-app/main/default/objects/FS_Service_Order__c/fields/FS_Other_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider for 8000/9000/9100</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Orders (Other Service Provider)</relationshipLabel>
    <relationshipName>Other_Service_Provider</relationshipName>
    <type>Lookup</type>
</CustomField>