force-app/main/default/objects/FS_Service_Order__c/fields/FS_Other_SP_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_SP_Code__c</fullName>
    <description>SP Code for 8000/9000 type SP Aligned Zip</description>
    <label>8000/9000/9100 SP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>