force-app/main/default/objects/FS_Service_Order__c/fields/FS_Service_Order_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Service_Order_Notes_Comments__c</fullName>
    <description>Service Order Notes/ Comments</description>
    <label>Service Order Notes/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>