force-app/main/default/objects/FS_Service_Order__c/fields/FS_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>FS_Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider for 7000/7100</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Orders (Service Provider)</relationshipLabel>
    <relationshipName>Service_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>