force-app/main/default/objects/FS_Service_Order__c/fields/FS_Service_Provider_no_longer_needed__c.field-meta.xml
<CustomField>
    <fullName>FS_Service_Provider_no_longer_needed__c</fullName>
    <formula>IF(  ISPICKVAL(FS_Flavor_Change_Header__r.FS_SP_go_out__c, &#39;No&#39;)  , True, False)</formula>
    <label>Service Provider no longer needed</label>
    <type>Checkbox</type>
</CustomField>