force-app/main/default/objects/FS_Service_Order__c/fields/FS_Service_Provider_override__c.field-meta.xml
<CustomField>
    <fullName>FS_Service_Provider_override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Provider override</label>
    <type>Checkbox</type>
</CustomField>