force-app/main/default/objects/FS_Service_Order__c/fields/FS_SP_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Code__c</fullName>
    <label>7000/7100 SP Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>