force-app/main/default/objects/FS_Service_Order__c/fields/FS_SP_Readiness_Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Readiness_Completed_DateTime__c</fullName>
    <description>SP Readiness Completed DateTime</description>
    <label>SP Readiness Completed DateTime</label>
    <type>DateTime</type>
</CustomField>