force-app/main/default/objects/FS_Service_Order__c/fields/FS_SP_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Scheduled_Date__c</fullName>
    <formula>FS_Flavor_Change_Header__r.FS_SP_Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP Scheduled Date</label>
    <type>Date</type>
</CustomField>