force-app/main/default/objects/FS_Service_Order__c/fields/FS_Tech_Instruction__c.field-meta.xml
<CustomField>
    <fullName>FS_Tech_Instruction__c</fullName>
    <label>Tech Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>