force-app/main/default/objects/FS_Service_Order__c/fields/Service_Provider_override_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_override_Completed_By__c</fullName>
    <label>Service Provider override Completed By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>