force-app/main/default/objects/FS_Service_Order__c/fields/SP_Override_Complete_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>SP_Override_Complete_Date_and_Time__c</fullName>
    <label>SP Override Complete Date and Time</label>
    <type>DateTime</type>
</CustomField>