force-app/main/default/objects/FS_Service_Order__c/recordTypes/Service_Order.recordType-meta.xml
<RecordType>
    <fullName>Service_Order</fullName>
    <active>true</active>
    <description>Service Order Record Type</description>
    <label>Service Order</label>
</RecordType>