force-app/main/default/objects/FS_Service_Order__c/validationRules/Customer_Readiness_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Readiness_Update</fullName>
    <active>true</active>
    <description>this is a valdiationrule ...</description>
    <errorConditionFormula>ISCHANGED( FS_Customer_Readiness__c ) &amp;&amp; 
(PRIORVALUE(FS_Customer_Readiness__c)=true)</errorConditionFormula>
    <errorDisplayField>FS_Customer_Readiness__c</errorDisplayField>
    <errorMessage>Customer Readiness cannot be unchecked.</errorMessage>
</ValidationRule>