force-app/main/default/objects/FS_Service_Order__c/validationRules/FS_SP_Override_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_SP_Override_Check</fullName>
    <active>true</active>
    <description>on changing service provider without checking the Service provider override checkbox on Service order detail page.</description>
    <errorConditionFormula>IF(AND(PRIORVALUE(FS_Service_Provider__c)!=FS_Service_Provider__c,AND(NOT(FS_Service_Provider_override__c),!ISNEW()) ),true,false)</errorConditionFormula>
    <errorMessage>To Change &#39;Service Provider&#39; , you have to check &#39;Service Provider Override&#39; Checkbox</errorMessage>
</ValidationRule>