force-app/main/default/objects/FS_Service_Order__c/validationRules/SP_Readiness_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>SP_Readiness_Update</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( FS_SP_Readiness__c ) &amp;&amp; 
(PRIORVALUE(FS_SP_Readiness__c)=true)</errorConditionFormula>
    <errorDisplayField>FS_SP_Readiness__c</errorDisplayField>
    <errorMessage>SP Readiness cannot be unchecked.</errorMessage>
</ValidationRule>